Stop gap to for a watch bug

--- a/public/stylesheets/watch.css
+++ b/public/stylesheets/watch.css
@@ -1,6 +1,7 @@
 #watchVidContainerFull {
     display: flex;
     justify-content: center;
+    height: 90%;
 }
 
 #watchVideoFull {
